--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
-	"name": "readnotes",
-	"version": "0.0.1",
-	"type": "module",
-	"private": true,
-	"engineStrict": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-static": "^3.0.6",
-		"@sveltejs/kit": "^2.8.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"@tailwindcss/vite": "^4.0.0-alpha.31",
-		"svelte": "^5.1.12",
-		"svelte-check": "^4.0.5",
-		"tailwindcss": "^4.0.0-alpha.31",
-		"typescript": "^5.6.3",
-		"vite": "^5.4.10"
-	}
+  "name": "piano-octaves",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0-alpha.34",
+    "svelte": "^5.1.3",
+    "tailwindcss": "^4.0.0-alpha.34",
+    "vite": "^5.4.10"
+  }
 }
